--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -7,7 +7,8 @@
         <a href = "about.html">About</a>
         <a href = "booksandcollections.html">Books/Collections</a>
         <a href = "cafeandmenu.html">Cafe Menu</a>
-        <a href = "Events.html">Events</a>
+        <a href = "events.html">Events</a>
+        <a href = "contact.html">Contact Us</a>
     </body>
 </head>
 </html>
