--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <a href = "booksandcollections.html">Books/Collections</a>
         <a href = "cafeandmenu.html">Cafe Menu</a>
         <a href = "Events.html">Events</a>
+
+        <h1>Welcome to Simply Revived</h1>
     </body>
 </head>
 </html>
