--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <a href = "about.html">About</a>
         <a href = "booksandcollections.html">Books/Collections</a>
         <a href = "cafeandmenu.html">Cafe Menu</a>
-        <a href = "Events.html">Events</a>
+        <a href = "events.html">Events</a>
 
         <h1>Welcome to Simply Revived</h1>
     </body>
