--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         <a href = "events.html">Events</a>
         <a href = "contact.html">Contact Us</a>
 
-        <h1>About Simply Revived</h1>
+        <h1>Contact Us</h1>
     </body>
 </head>
 </html>
