--- a/events.html
+++ b/events.html
@@ -9,6 +9,8 @@
         <a href = "cafeandmenu.html">Cafe Menu</a>
         <a href = "events.html">Events</a>
         <a href = "contact.html">Contact Us</a>
+
+        <h1>Get Event Tickets</h1>
     </body>
 </head>
 </html>
