--- a/cafeandmenu.html
+++ b/cafeandmenu.html
@@ -9,6 +9,8 @@
         <a href = "cafeandmenu.html">Cafe Menu</a>
         <a href = "events.html">Events</a>
         <a href = "contact.html">Contact Us</a>
+
+        <h1>Order from our Cafe Menu</h1>
     </body>
 </head>
 </html>
