--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <a href = "booksandcollections.html">Books/Collections</a>
         <a href = "cafeandmenu.html">Cafe Menu</a>
         <a href = "events.html">Events</a>
+        <a href = "contact.html">Contact Us</a>
 
         <h1>Welcome to Simply Revived</h1>
     </body>
