--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HOME</title>
+    <title>BOOKS/COLLECTIONS</title>
     <body>
         <a href = "index.html">Home</a>
         <a href = "about.html">About</a>
