--- a/about.html
+++ b/about.html
@@ -11,6 +11,11 @@
         <a href = "contact.html">Contact Us</a>
 
         <h1>About Simply Revived</h1>
+
+        <p>History: Simply Revived began as a small neighbourhood bookstore aimed at rekindling the love of reading and community. Over time, it has grown into a welcoming space with a curated selection of books for all ages, hosting author events and reading circles. A cozy café corner offers coffee and bakery items, creating a space for customers to relax, read, and connect.
+            Mission Statement: To inspire a love for reading and community by offering a curated selection of books and a cozy space where stories, coffee, and connection come together.
+            Vision Statement: To be the go-to bookstore and café where people of all ages can discover new ideas, enjoy meaningful conversations, and revive the simple joy of books and togetherness.
+        </p>
     </body>
 </head>
 </html>
