--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <a href = "contact.html">Contact Us</a>
 
         <h1>Welcome to Simply Revived</h1>
+        
+        <img src="image.png">
     </body>
 </head>
 </html>
