--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <h1>Welcome to Simply Revived</h1>
         
-        <img src="image.png">
+        <img src="store.png">
     </body>
 </head>
 </html>
