--- a/about.html
+++ b/about.html
@@ -11,6 +11,10 @@
         <a href = "contact.html">Contact Us</a>
 
         <h1>About Simply Revived</h1>
+        
+        <img src="img/store.png" width="500">
+
+
 
         <p>
             History: Simply Revived began as a small neighbourhood bookstore aimed at rekindling the love of reading and community. Over time, it has grown into a welcoming space with a curated selection of books for all ages, hosting author events and reading circles. A cozy café corner offers coffee and bakery items, creating a space for customers to relax, read, and connect.
