--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -11,6 +11,9 @@
         <a href = "contact.html">Contact Us</a>
 
         <h1>Buy Books/Collections</h1>
+
+        <img src="img/store.png" width="500">
+        
     </body>
 </head>
 </html>
