--- a/cafeandmenu.html
+++ b/cafeandmenu.html
@@ -10,7 +10,12 @@
         <a href = "events.html">Events</a>
         <a href = "contact.html">Contact Us</a>
 
+        <img src="img/store.png" width="500">
+
         <h1>Order from our Cafe Menu</h1>
+
+        <img src="img/cafemenu.png" width="500">
+
     </body>
 </head>
 </html>
