--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@
         <a href = "contact.html">Contact Us</a>
 
         <h1>Contact Us</h1>
+
+        <img src="img/store.png" width="500">
+        
     </body>
 </head>
 </html>
