--- a/events.html
+++ b/events.html
@@ -11,6 +11,9 @@
         <a href = "contact.html">Contact Us</a>
 
         <h1>Get Event Tickets</h1>
+
+        <img src="events.png" width="500">
+
     </body>
 </head>
 </html>
