--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,15 @@
         <h1>Contact Us</h1>
 
         <img src="img/store.png" width="500">
+
+        <h3>Contact us on our Social media pages</h3>
+
+        <h3>Leave a comment on the Website</h3>
+
+        <h3>Contact us at the office.</h3>
+        <h4>Contact Number:</h4>
+        <h4>Email:</h4>
+        <address>Adress:</address>
         
     </body>
 </head>
