--- a/events.html
+++ b/events.html
@@ -12,7 +12,9 @@
 
         <h1>Get Event Tickets</h1>
 
-        <img src="events.png" width="500">
+        <img src="img/events.png" width="500">
+
+        <h1>Book a ticket for the next event.</h1>
 
     </body>
 </head>
