--- a/about.html
+++ b/about.html
@@ -16,12 +16,19 @@
 
 
 
+
+        <h3>History</h3>
+
         <p>
-            History: Simply Revived began as a small neighbourhood bookstore aimed at rekindling the love of reading and community. Over time, it has grown into a welcoming space with a curated selection of books for all ages, hosting author events and reading circles. A cozy café corner offers coffee and bakery items, creating a space for customers to relax, read, and connect.
+         Simply Revived began as a small neighbourhood bookstore aimed at rekindling the love of reading and community. Over time, it has grown into a welcoming space with a curated selection of books for all ages, hosting author events and reading circles. A cozy café corner offers coffee and bakery items, creating a space for customers to relax, read, and connect.
         </p>
 
-        <p>Mission Statement: To inspire a love for reading and community by offering a curated selection of books and a cozy space where stories, coffee, and connection come together.</p>
+
+        <h3>Mission Statement</h3>
+        <p></p>To inspire a love for reading and community by offering a curated selection of books and a cozy space where stories, coffee, and connection come together.</p>
     
+        <h3>Vision Statement</h3>
+
         <p>Vision Statement: To be the go-to bookstore and café where people of all ages can discover new ideas, enjoy meaningful conversations, and revive the simple joy of books and togetherness.</p>
 
     </body>
