--- a/cafeandmenu.html
+++ b/cafeandmenu.html
@@ -3,19 +3,18 @@
 <head>
     <title>CAFE/MENU</title>
     <body>
-        <a href = "index.html">Home</a>
+             <a href = "index.html">Home</a>
         <a href = "about.html">About</a>
         <a href = "booksandcollections.html">Books/Collections</a>
         <a href = "cafeandmenu.html">Cafe Menu</a>
         <a href = "events.html">Events</a>
         <a href = "contact.html">Contact Us</a>
 
-        <img src="img/store.png" width="500">
+        <h1>Order from our bakery and coffee shop</h1>
 
-        <h1>Order from our Cafe Menu</h1>
-
-        <img src="img/cafemenu.png" width="500">
+        <img src="img/cafemenu.png" width="500" height="500">
 
     </body>
+
 </head>
 </html>
