index.html updated

--- a/index.html
+++ b/index.html
@@ -1,18 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>HOME</title>
-    <body>
-        <a href = "index.html">Home</a>
-        <a href = "about.html">About</a>
-        <a href = "booksandcollections.html">Books/Collections</a>
-        <a href = "cafeandmenu.html">Cafe Menu</a>
-        <a href = "events.html">Events</a>
-        <a href = "contact.html">Contact Us</a>
-
-        <h1>Welcome to Simply Revived</h1>
-        
-        <img src="img/store.png" width="500">
-    </body>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simply Revived | Bookstore & Coffee</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <h1>Simply Revived</h1>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#books">Books</a></li>
+        <li><a href="#coffee">Coffee & Bakery</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero" id="home">
+    <h2>Welcome to Simply Revived</h2>
+    <p>Your neighborhood bookstore with a cozy coffee corner.</p>
+    <a href="#books" class="btn">Shop Books</a>
+  </section>
+
+  <!-- Books Section -->
+  <section id="books">
+    <h2>Our Books</h2>
+    <p>Browse our carefully curated collection of novels, non-fiction, and children’s books. Available in-store and online.</p>
+    <div class="card">
+      <h3>Bestsellers</h3>
+      <p>Discover today’s most popular reads.</p>
+      <a href="#" class="btn">View More</a>
+    </div>
+  </section>
+
+  <!-- Coffee & Bakery Section -->
+  <section id="coffee">
+    <h2>Coffee & Bakery</h2>
+    <p>Relax with freshly brewed coffee and homemade bakery treats while you read.</p>
+    <div class="card">
+      <h3>Our Menu</h3>
+      <p>From cappuccinos to croissants, we’ve got the perfect pairing for your book.</p>
+      <a href="#" class="btn">View Menu</a>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Simply Revived</h2>
+    <p>Founded in 2010, Simply Revived started as a second-hand bookstore and has grown into a community hub where books meet coffee culture.</p>
+    <p>Our mission is to revive the love of reading while creating a warm space for connection.</p>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: info@simplyrevived.co.za</p>
+    <p>Phone: +27 12 345 6789</p>
+    <p>Visit us at 123 Book Street, Pretoria</p>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Simply Revived. All Rights Reserved.</p>
+  </footer>
+
+</body>
 </html>
