--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <h1>Simply Revived</h1>
     <nav>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#books">Books</a></li>
-        <li><a href="#coffee">Coffee & Bakery</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="booksandcollections.html">Books</a></li>
+        <li><a href="cafeandmenu.html">Coffee & Bakery</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
