books and collections update

--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -1,19 +1,74 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>BOOKS/COLLECTIONS</title>
-    <body>
-        <a href = "index.html">Home</a>
-        <a href = "about.html">About</a>
-        <a href = "booksandcollections.html">Books/Collections</a>
-        <a href = "cafeandmenu.html">Cafe Menu</a>
-        <a href = "events.html">Events</a>
-        <a href = "contact.html">Contact Us</a>
-
-        <h1>Buy Books/Collections</h1>
-
-        <img src="img/store.png" width="500">
-        
-    </body>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simply Revived | Books</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <h1>Simply Revived</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="books.html" class="active">Books</a></li>
+        <li><a href="cafeandmenu.html">Coffee & Bakery</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Books Section -->
+  <section id="books">
+    <h2>Browse Our Collection</h2>
+    <p>Discover your next favorite read – from timeless classics to new bestsellers.</p>
+
+    <div class="book-grid">
+
+      <!-- Example Book Card -->
+      <div class="card">
+        <img src="book1.jpg" alt="Book Title 1">
+        <h3>The Timeless Journey</h3>
+        <p>By Jane Smith</p>
+        <p><strong>R220</strong></p>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+
+      <div class="card">
+        <img src="book2.jpg" alt="Book Title 2">
+        <h3>Shadows & Light</h3>
+        <p>By Michael Johnson</p>
+        <p><strong>R180</strong></p>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+
+      <div class="card">
+        <img src="book3.jpg" alt="Book Title 3">
+        <h3>Children of the Stars</h3>
+        <p>By Aisha Patel</p>
+        <p><strong>R250</strong></p>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+
+      <div class="card">
+        <img src="store.png" alt="Book Title 4">
+        <h3>Whispers in the Wind</h3>
+        <p>By David Brown</p>
+        <p><strong>R200</strong></p>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Simply Revived. All Rights Reserved.</p>
+  </footer>
+
+</body>
 </html>
