--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section class="hero" id="home">
     <h2>Welcome to Simply Revived</h2>
     <p>Your neighborhood bookstore with a cozy coffee corner.</p>
-    <a href="#books" class="btn">Shop Books</a>
+    <a href="booksandcollections.html" class="btn">Shop Books</a>
   </section>
 
   <!-- Books Section -->
@@ -36,7 +36,7 @@
     <div class="card">
       <h3>Bestsellers</h3>
       <p>Discover today’s most popular reads.</p>
-      <a href="#" class="btn">View More</a>
+      <a href="booksandcollections.html" class="btn">View More</a>
     </div>
   </section>
 
@@ -47,14 +47,14 @@
     <div class="card">
       <h3>Our Menu</h3>
       <p>From cappuccinos to croissants, we’ve got the perfect pairing for your book.</p>
-      <a href="#" class="btn">View Menu</a>
+      <a href="cafeandmenu.html" class="btn">View Menu</a>
     </div>
   </section>
 
   <!-- About Section -->
   <section id="about">
     <h2>About Simply Revived</h2>
-    <p>Founded in 2010, Simply Revived started as a second-hand bookstore and has grown into a community hub where books meet coffee culture.</p>
+    <p>Simply Revived started as a second-hand bookstore and has grown into a community hub where books meet coffee culture.</p>
     <p>Our mission is to revive the love of reading while creating a warm space for connection.</p>
   </section>
 
@@ -63,7 +63,7 @@
     <h2>Contact Us</h2>
     <p>Email: info@simplyrevived.co.za</p>
     <p>Phone: +27 12 345 6789</p>
-    <p>Visit us at 123 Book Street, Pretoria</p>
+    <p>Visit us at 123 Book Street, Cape Town/p>
   </section>
 
   <!-- Footer -->
