--- a/cafeandmenu.html
+++ b/cafeandmenu.html
@@ -1,20 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>CAFE/MENU</title>
-    <body>
-             <a href = "index.html">Home</a>
-        <a href = "about.html">About</a>
-        <a href = "booksandcollections.html">Books/Collections</a>
-        <a href = "cafeandmenu.html">Cafe Menu</a>
-        <a href = "events.html">Events</a>
-        <a href = "contact.html">Contact Us</a>
-
-        <h1>Order from our bakery and coffee shop</h1>
-
-        <img src="img/cafemenu.png" width="500" height="400">
-
-    </body>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simply Revived | Cafe & Bakery</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-</html>
+<body>
+
+  <!-- Header -->
+  <header>
+    <h1>Simply Revived</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="booksandcollections.html">Books</a></li>
+        <li><a href="cafeandmenu.html" class="active">Coffee & Bakery</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Cafe Section -->
+  <section id="coffee">
+    <h2>Our Coffee & Bakery</h2>
+    <p>Relax in our cozy cafe with freshly brewed coffee and homemade bakery delights. Perfect for pairing with a good book.</p>
+
+    <div class="menu-grid">
+
+      <!-- Coffee Menu -->
+      <div class="card">
+        <h3>Coffee</h3>
+        <ul>
+          <li>Espresso – <strong>R25</strong></li>
+          <li>Cappuccino – <strong>R35</strong></li>
+          <li>Latte – <strong>R38</strong></li>
+          <li>Americano – <strong>R30</strong></li>
+          <li>Mocha – <strong>R40</strong></li>
+        </ul>
+      </div>
+
+      <!-- Bakery Menu -->
+      <div class="card">
+        <h3>Bakery</h3>
+        <ul>
+          <li>Croissant – <strong>R28</strong></li>
+          <li>Muffin (Blueberry/Chocolate) – <strong>R32</strong></li>
+          <li>Slice of Cake – <strong>R45</strong></li>
+          <li>Brownie – <stro
