--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -31,7 +31,7 @@
 
       <!-- Example Book Card -->
       <div class="card">
-        <img src="book1.jpg" alt="Book Title 1">
+        <img src="img/store.png" alt="Book Title 1">
         <h3>The Timeless Journey</h3>
         <p>By Jane Smith</p>
         <p><strong>R220</strong></p>
@@ -39,7 +39,7 @@
       </div>
 
       <div class="card">
-        <img src="book2.jpg" alt="Book Title 2">
+        <img src="img/store.png" alt="Book Title 2">
         <h3>Shadows & Light</h3>
         <p>By Michael Johnson</p>
         <p><strong>R180</strong></p>
@@ -47,7 +47,7 @@
       </div>
 
       <div class="card">
-        <img src="book3.jpg" alt="Book Title 3">
+        <img src="img/store.png" alt="Book Title 3">
         <h3>Children of the Stars</h3>
         <p>By Aisha Patel</p>
         <p><strong>R250</strong></p>
@@ -55,7 +55,7 @@
       </div>
 
       <div class="card">
-        <img src="store.png" alt="Book Title 4">
+        <img src="img/store.png" alt="Book Title 4">
         <h3>Whispers in the Wind</h3>
         <p>By David Brown</p>
         <p><strong>R200</strong></p>
