--- a/events.html
+++ b/events.html
@@ -1,21 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>EVENTS</title>
-    <body>
-        <a href = "index.html">Home</a>
-        <a href = "about.html">About</a>
-        <a href = "booksandcollections.html">Books/Collections</a>
-        <a href = "cafeandmenu.html">Cafe Menu</a>
-        <a href = "events.html">Events</a>
-        <a href = "contact.html">Contact Us</a>
-
-        <h1>Get Event Tickets</h1>
-
-        <img src="img/events.png" width="500">
-
-        <h1>Book a ticket for the next event.</h1>
-
-    </body>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simply Revived | Events</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <h1>Simply Revived</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="booksandcollections.html">Books</a></li>
+        <li><a href="cafeandmenu.html">Coffee & Bakery</a></li>
+        <li><a href="events.html" class="active">Events</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Events Section -->
+  <section id="events">
+    <h2>Upcoming Events</h2>
+    <p>Join us for exciting community gatherings, author signings, and book club sessions.</p>
+
+    <div class="event-grid">
+
+      <!-- Event Card -->
+      <div class="card">
+        <h3>📖 Book Launch: "Whispers in the Wind"</h3>
+        <p><strong>Date:</strong> 12 October 2025</p>
+        <p><strong>Time:</strong> 6:00 PM – 8:00 PM</p>
+        <p><strong>Location:</strong> Simply Revived Bookstore</p>
+        <p>Meet author David Brown as he introduces his latest novel and signs copies.</p>
+      </div>
+
+      <div class="card">
+        <h3>☕ Coffee & Conversations</h3>
+        <p><strong>Date:</strong> 20 October 2025</p>
+        <p><strong>Time:</strong> 10:00 AM – 12:00 PM</p>
+        <p><strong>Location:</strong> Cafe Corner, Simply Revived</p>
+        <p>A casual community event where readers share book recommendations over coffee.</p>
+      </div>
+
+      <div class="card">
+        <h3>👨‍👩‍👧 Storytime for Kids</h3>
+        <p><strong>Date:</strong> 5 November 2025</p>
+        <p><strong>Time:</strong> 3:00 PM – 4:00 PM</p>
+        <p><strong>Location:</strong> Children’s Section</p>
+        <p>A fun and interactive storytelling session for kids aged 4–10, featuring classic tales and new favorites.</p>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Simply Revived. All Rights Reserved.</p>
+  </footer>
+
+</body>
 </html>
