--- a/index.html
+++ b/index.html
@@ -13,49 +13,32 @@
     <h1>Simply Revived</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home" class="active">Home</a></li>
         <li><a href="booksandcollections.html">Books</a></li>
         <li><a href="cafeandmenu.html">Coffee & Bakery</a></li>
+        <li><a href="events.html">Events</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Hero Section -->
+  <!-- Hero Section with Banner -->
   <section class="hero" id="home">
-    <h2>Welcome to Simply Revived</h2>
-    <p>Your neighborhood bookstore with a cozy coffee corner.</p>
-    <a href="booksandcollections.html" class="btn">Shop Books</a>
-  </section>
-
-  <!-- Books Section -->
-  <section id="books">
-    <h2>Our Books</h2>
-    <p>Browse our carefully curated collection of novels, non-fiction, and children’s books. Available in-store and online.</p>
-    <div class="card">
-      <h3>Bestsellers</h3>
-      <p>Discover today’s most popular reads.</p>
-      <a href="booksandcollections.html" class="btn">View More</a>
-    </div>
-  </section>
-
-  <!-- Coffee & Bakery Section -->
-  <section id="coffee">
-    <h2>Coffee & Bakery</h2>
-    <p>Relax with freshly brewed coffee and homemade bakery treats while you read.</p>
-    <div class="card">
-      <h3>Our Menu</h3>
-      <p>From cappuccinos to croissants, we’ve got the perfect pairing for your book.</p>
-      <a href="cafeandmenu.html" class="btn">View Menu</a>
+    <div class="hero-overlay">
+      <h2>Welcome to Simply Revived</h2>
+      <p>Your neighborhood bookstore with a cozy coffee corner and a hub for community events.</p>
+      <a href="booksandcollections.html" class="btn">Shop Books</a>
+      <a href="cafeandmenu.html" class="btn">Visit Café</a>
     </div>
   </section>
 
   <!-- About Section -->
   <section id="about">
     <h2>About Simply Revived</h2>
-    <p>Simply Revived started as a second-hand bookstore and has grown into a community hub where books meet coffee culture.</p>
-    <p>Our mission is to revive the love of reading while creating a warm space for connection.</p>
+    <p>Simply Revived began as a small neighborhood bookstore with a passion for rekindling the love of reading. 
+    Over the years, it has grown into a cozy space offering curated books, community events, and a café corner with coffee and bakery delights. 
+    We remain dedicated to inspiring readers and creating a welcoming hub for connection.</p>
   </section>
 
   <!-- Contact Section -->
@@ -63,7 +46,7 @@
     <h2>Contact Us</h2>
     <p>Email: info@simplyrevived.co.za</p>
     <p>Phone: +27 12 345 6789</p>
-    <p>Visit us at 123 Book Street, Cape Town/p>
+    <p>Visit us at 123 Book Street, Cape Town</p>
   </section>
 
   <!-- Footer -->
@@ -73,3 +56,4 @@
 
 </body>
 </html>
+
