about page update

--- a/about.html
+++ b/about.html
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>ABOUT</title>
-    <body>
-        <a href = "index.html">Home</a>
-        <a href = "about.html">About</a>
-        <a href = "booksandcollections.html">Books/Collections</a>
-        <a href = "cafeandmenu.html">Cafe Menu</a>
-        <a href = "events.html">Events</a>
-        <a href = "contact.html">Contact Us</a>
-
-        <h1>About Simply Revived</h1>
-        
-        <img src="img/store.png" width="500">
-
-
-
-
-        <h3>History</h3>
-
-        <p>
-         Simply Revived began as a small neighbourhood bookstore aimed at rekindling the love of reading and community. Over time, it has grown into a welcoming space with a curated selection of books for all ages, hosting author events and reading circles. A cozy café corner offers coffee and bakery items, creating a space for customers to relax, read, and connect.
-        </p>
-
-
-        <h3>Mission Statement</h3>
-        <p></p>To inspire a love for reading and community by offering a curated selection of books and a cozy space where stories, coffee, and connection come together.</p>
-    
-        <h3>Vision Statement</h3>
-
-        <p>Vision Statement: To be the go-to bookstore and café where people of all ages can discover new ideas, enjoy meaningful conversations, and revive the simple joy of books and togetherness.</p>
-
-    </body>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simply Revived | About Us</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <h1>Simply Revived</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="booksandcollections.html">Books</a></li>
+        <li><a href="cafeandmenu.html">Coffee & Bakery</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="about.html" class="active">About Us</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Simply Revived</h2>
+
+    <p><strong>Our History:</strong> Simply Revived began as a small neighborhood bookstore with a mission to rekindle the love of reading and community. Over time, it has grown into a welcoming space offering a curated selection of books for all ages, while also hosting local author events and reading circles. To enhance the experience, the store features a cozy café corner serving freshly brewed coffee and bakery items, making it a place where customers can relax, read, and connect.</p>
+
+    <p><strong>Our Mission:</strong> To inspire a love for reading and community by offering a curated selection of books and a cozy space where stories, coffee, and connection come together.</p>
+
+    <p><strong>Our Vision:</strong> To be the go-to bookstore and café where people of all ages can discover new ideas, enjoy meaningful conversations, and revive the simple joy of books and togetherness.</p>
+
+    <p><strong>Community Focus:</strong> Simply Revived serves as a hub for book lovers, students, families, and professionals. We host workshops, reading circles, and cultural events that bring the community together, fostering learning, creativity, and connection.</p>
+
+    <p><strong>Why Visit Us?</strong> Whether you're looking for your next favorite book, a cozy corner to enjoy coffee and a pastry, or a place to connect with fellow readers, Simply Revived offers a warm, welcoming atmosphere for everyone.</p>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Simply Revived. All Rights Reserved.</p>
+  </footer>
+
+</body>
 </html>
