--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -14,8 +14,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="books.html" class="active">Books</a></li>
+        <li><a href="booksandcollections.html" class="active">Books</a></li>
         <li><a href="cafeandmenu.html">Coffee & Bakery</a></li>
+        <li><a href="events.html">Events</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
