--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>CONTACTUS</title>
-    <body>
-        <a href = "index.html">Home</a>
-        <a href = "about.html">About</a>
-        <a href = "booksandcollections.html">Books/Collections</a>
-        <a href = "cafeandmenu.html">Cafe Menu</a>
-        <a href = "events.html">Events</a>
-        <a href = "contact.html">Contact Us</a>
-
-        <h1>Contact Us</h1>
-
-        <img src="img/store.png" width="500">
-
-        <h3>Contact us on our Social media pages</h3>
-
-        <h3>Leave a comment on the Website</h3>
-
-        <h3>Contact us at the office.</h3>
-        <h4>Contact Number:</h4>
-        <h4>Email:</h4>
-        <address>Adress:</address>
-        
-    </body>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simply Revived | Contact Us</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <h1>Simply Revived</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html#home">Home</a></li>
+        <li><a href="books.html">Books</a></li>
+        <li><a href="cafe.html">Coffee & Bakery</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>We’d love to hear from you! Reach out to us for inquiries, feedback, or to RSVP for events.</p>
+
+    <!-- Contact Details -->
+    <div class="card">
+      <h3>Our Contact Info</h3>
+      <p><strong>Email:</strong> info@simplyrevived.co.za</p>
+      <p><strong>Phone:</strong> +27 12 345 6789</p>
+      <p><strong>Address:</strong> 123 Book Street, Pretoria</p>
+    </div>
+
+    <!-- Contact Form -->
+    <div class="card">
+      <h3>Send Us a Message</h3>
+      <form action="#" method="post">
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name" placeholder="Your Name" required><br><br>
+
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" placeholder="Your Email" required><br><br>
+
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea><br><br>
+
+        <button type="submit" class="btn">Send Message</button>
+      </form>
+    </div>
+
+    <!-- Google Maps (Optional Embed) -->
+    <div class="card">
+      <h3>Find Us Here</h3>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3575.123456!2d28.000000!3d-25.746111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e956789abcde%3A0xfedcba9876543210!2s123%20Book%20Street%2C%20Pretoria!5e0!3m2!1sen!2sza!4v1690000000000"
+        width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Simply Revived. All Rights Reserved.</p>
+  </footer>
+
+</body>
 </html>
