--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
     <nav>
       <ul>
         <li><a href="index.html#home">Home</a></li>
-        <li><a href="books.html">Books</a></li>
-        <li><a href="cafe.html">Coffee & Bakery</a></li>
+        <li><a href="booksandcollections.html">Books</a></li>
+        <li><a href="cafeandmenu.html">Coffee & Bakery</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html" class="active">Contact</a></li>
@@ -33,7 +33,7 @@
       <h3>Our Contact Info</h3>
       <p><strong>Email:</strong> info@simplyrevived.co.za</p>
       <p><strong>Phone:</strong> +27 12 345 6789</p>
-      <p><strong>Address:</strong> 123 Book Street, Pretoria</p>
+      <p><strong>Address:</strong> 123 Book Street, Cape Town</p>
     </div>
 
     <!-- Contact Form -->
