--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <h1>Simply Revived</h1>
     <nav>
       <ul>
-        <li><a href="index.html#home">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="booksandcollections.html">Books</a></li>
         <li><a href="cafeandmenu.html">Coffee & Bakery</a></li>
         <li><a href="events.html">Events</a></li>
