--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -30,9 +30,9 @@
 
     <div class="book-grid">
 
-      <!-- Example Book Card -->
+      <!-- Book Card -->
       <div class="card">
-        <img src="img/store.png" alt="Book Title 1">
+        <img src="img/store.png" alt="Book Title 1" class="book-img">
         <h3>The Timeless Journey</h3>
         <p>By Jane Smith</p>
         <p><strong>R220</strong></p>
@@ -40,7 +40,7 @@
       </div>
 
       <div class="card">
-        <img src="img/store.png" alt="Book Title 2">
+        <img src="img/store.png" alt="Book Title 2" class="book-img">
         <h3>Shadows & Light</h3>
         <p>By Michael Johnson</p>
         <p><strong>R180</strong></p>
@@ -48,7 +48,7 @@
       </div>
 
       <div class="card">
-        <img src="img/store.png" alt="Book Title 3">
+        <img src="img/store.png" alt="Book Title 3" class="book-img">
         <h3>Children of the Stars</h3>
         <p>By Aisha Patel</p>
         <p><strong>R250</strong></p>
@@ -56,7 +56,7 @@
       </div>
 
       <div class="card">
-        <img src="img/store.png" alt="Book Title 4">
+        <img src="img/store.png" alt="Book Title 4" class="book-img">
         <h3>Whispers in the Wind</h3>
         <p>By David Brown</p>
         <p><strong>R200</strong></p>
