--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <li><a href="cafeandmenu.html">Coffee & Bakery</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="about.html" class="active">About Us</a></li>
-        <li><a href="index.html#contact">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
