--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <title>Simply Revived | Bookstore & Coffee</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
+
+    <!-- jQuery CDN -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <!-- Your CSS -->
+    <link rel="stylesheet" href="style.css" />
+
+
 <body>
 
   <!-- Header -->
