--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -37,7 +37,7 @@
   <p>Browse new arrivals, classics, kids' books and more.</p>
 </section>
 
-<!-- 🔍 SEARCH BAR -->
+<!--  SEARCH BAR -->
 <div class="search-container">
   <input type="text" id="bookSearch" placeholder="Search for a book or author...">
 </div>
